+ standardized to iconify source + example blocks in puzzles pages are now collapsable, with a caret indicator of their present state + removed some unneeded classes, general html cleanup + resolved some TODOs to fill in meta tags + fixed page titles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,6 +16,6 @@ $success: #7aebb6;
 $almost: #ffa652;
 $failure: #ff5252;
 
-$shadow-color: rgba($accent-color, 0.1);
+$shadow-color: rgba($accent-color, 0.15);
 $main-gradient: linear-gradient(135deg, $accent-color 0%, rgba($accent-color, 0.75) 100%);
 $second-gradient: linear-gradient(135deg, $second-color 0%, rgba($second-color, 0.75) 100%);
